bk_ida/gccida/g2/expand_goto
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1247:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v1; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1256:4: error: expected ';' after expression
rtx v10; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1256:5: error: use of undeclared identifier 'v10'; did you mean 'v1'?
rtx v10; // rax 
    ^~~
    v1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1247:12: note: 'v1' declared here
tree_node *v1; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1261:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1261:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1268:4: error: expected ';' after expression
rtx last_insn; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1268:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1281:36: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_u00( LABEL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1286:39: error: expected ')'
x_nonlocal_goto_handler_slots = ( rtx)x_nonlocal_goto_handler_slots[1] ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1284:5: note: to match this '('
for ( i = function_data->x_nonlocal_labels; 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1295:1: error: use of undeclared identifier 'v10'
v10 = copy_to_reg( v9); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1297:7: error: use of undeclared identifier 'v10'
v12 = v10; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1300:1: error: use of undeclared identifier 'v15'
v15 = copy_to_reg( v14); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1302:7: error: use of undeclared identifier 'v15'
v17 = v15; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1316:1: error: use of undeclared identifier 'last_insn'
last_insn = get_last_insn( ); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1317:6: error: use of undeclared identifier 'last_insn'
if ( last_insn ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1319:20: error: use of undeclared identifier 'last_insn'
while ( *( _WORD *)last_insn != 33 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1321:17: error: use of undeclared identifier 'last_insn'
if ( *( _WORD *)last_insn != 34 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1323:1: error: use of undeclared identifier 'last_insn'
last_insn = ( rtx)last_insn[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/stmt.c:1324:6: error: use of undeclared identifier 'last_insn'
if ( last_insn ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/expand_goto/src/obj/stmt.o] Error 1
